@@ -13,8 +13,19 @@ namespace Business.Data.Objects.Common.Utils
     /// <typeparam name="T"></typeparam>
     public class LinqFilter<T>
     {
+        private Expression<Func<T, bool>> mResult;
 
-        public Expression<Func<T, bool>> Result { get; private set; }
+        /// <summary>
+        /// Ritorna espressione risultato delle operazioni eseguite.
+        /// In caso di nessuna operazione ritorna una generica espressione sempre vera (1=1)
+        /// </summary>
+        public Expression<Func<T, bool>> Result
+        {
+            get
+            {
+                return this.mResult ?? ((t) => 1 == 1);
+            }
+        }
 
         /// <summary>
         /// Aggiunge Condizione AND
@@ -22,11 +33,10 @@ namespace Business.Data.Objects.Common.Utils
         /// <param name="exp"></param>
         public void And(Expression<Func<T, bool>> exp)
         {
-            if (this.Result == null)
-                this.Result = exp;
-
-            var tm = this.Result;
-            this.Result = LinqExt.AndAlso(tm, exp);
+            if (this.mResult == null)
+                this.mResult = exp;
+            else
+                this.mResult = LinqExt.AndAlso(this.mResult, exp);
         }
 
         /// <summary>
@@ -35,11 +45,10 @@ namespace Business.Data.Objects.Common.Utils
         /// <param name="exp"></param>
         public void Or(Expression<Func<T, bool>> exp)
         {
-            if (this.Result == null)
-                this.Result = exp;
-
-            var tm = this.Result;
-            this.Result = LinqExt.OrElse(tm, exp);
+            if (this.mResult == null)
+                this.mResult = exp;
+            else
+                this.mResult = LinqExt.OrElse(this.mResult, exp);
         }
 
     }
