@@ -82,3 +82,6 @@ Aggiunto metodo su oggetto "FromJson" per deserializzazione. Attenzione: presupp
 
 [11/08/2021] - 5.0.26 - Simone Pelaia
 Aggiunta classe LinqFilter per combinare dinamicamente più statement LINQ. utile nelle ricerche con parametri multipli opzionali
+
+[12/08/2021] - 5.0.27 - Simone Pelaia
+Fix classe LinqFilter ritorna condizione vera se non eseguita alcuna combinazione And/Or
